tests/neg-custom-args/captures/leaked-curried.check
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:14:20 ----------------------------------------------------
14 |        () => () => io // error
   |                    ^^
   |              reference (io : Cap^) is not included in the allowed capture set {} of the self type of class Fuzz
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:17:20 ----------------------------------------------------
17 |        () => () => io // error
   |                    ^^
   |               reference (io : Cap^) is not included in the allowed capture set {} of the self type of class Foo
